question-11-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    id: ds-important
    uuid: 18426a0b-5f59-4e10-923f-c0e078e82462
  name: ds-important
  namespace: project-tiger
spec:
  selector:
    matchLabels:
      app: ds-important
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ds-important
    spec:
      containers:
      - name: ds-container
        image: httpd:2.4-alpine
        resources:
          requests:
            memory: 10Mi
            cpu: 10m
