question-2-pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1
  name: pod1
spec:
  containers:
  - name: pod1-container
    image: httpd:2.4.41-alpine
  tolerations:
  - effect: "NoSchedule"
    key: node-role.kubernetes.io/master
  nodeSelector:
    node-role.kubernetes.io/master: ""
