question-21-static-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: my-static-pod
  name: my-static-pod
spec:
  containers:
  - image: nginx:1.16-alpine
    name: my-static-pod
    resources:
      requests:
        cpu: 10m
        memory: 20Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
# kubectl run my-static-pod --image=nginx:1.16-alpine --requests=cpu=10m,memory=20Mi -o yaml --dry-run=client > question-21-static-pod.yaml
