question-24-alpine-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    role: security
  name: question-24-alpine-pod
  namespace: security
spec:
  containers:
  - image: alpine
    name: question-24-busybox-container
    command: ["sh", "-c", "sleep 9600"]
    ports:
    - containerPort: 8081
