question-24-curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    role: security
  name: question-24-curl-pod
  namespace: security
spec:
  containers:
  - image: curlimages/curl
    name: question-24-curl-container
    command: ["sh", "-c", "sleep 9600"]
    ports:
    - containerPort: 8081
