question-25-etcd-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: etcd-pod
  name: etcd-pod
spec:
  containers:
  - image: nginx
    name: etcd-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
