question-3-statefulset-scale.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: question-3
  namespace: project-c13
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: o3db
        image: k8s.gcr.io/nginx-slim:0.8
      - name: o3db
        image: nginx
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "my-storage-class"
      resources:
        requests:
          storage: 1Gi
