question-4-am-i-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    id: cross-server-ready
  name: am-i-ready
  namespace: default
spec:
  containers:
  - image: nginx:1.16.1-alpine
    name: am-i-ready
