question-21-service-pod.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: my-static-pod
  name: static-pod-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: my-static-pod
  type: NodePort
status:
  loadBalancer: {}
---
# kubectl expose pod my-static-pod --type=NodePort --port=80 --dry-run=client -o yaml > question-21-service-pod.yaml
