question-4-expose-pod-2-port-80.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: ready-if-service-ready
  name: service-am-i-ready
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: ready-if-service-ready
status:
  loadBalancer: {}
